# madosho

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  compose.container.yaml  compose.dev.yaml  compose.ocr.yaml  compose.tls.yaml  compose.yaml  pyproject.toml
.github/workflows/: release.yml
alchemy/: __init__.py  compile.py  confidence.py  ledger.py  llm.py  orchestrator.py  prompts.py  render.py  report.md  types.py
backend/madosho/: __init__.py
backend/madosho/adapters/docling/: chunker.py  fastlane.py  parser.py  router.py
backend/madosho/adapters/lancedb/: store.py
backend/madosho/adapters/qdrant/: sparse.py  store.py
backend/madosho/adapters/st_models/: embedder.py  reranker.py
backend/madosho/cli/: main.py
backend/madosho/core/: config.py  corpus.py  errors.py  hooks.py  meta.py  protocols.py  registry.py  types.py
backend/madosho/operators/: _base.py  chunk_read.py  fuse.py  keyword_search.py  rerank.py  semantic_search.py
backend/madosho/testing/: contracts.py  fakes.py
backend/madosho_server/: alchemy_exec.py  api.py  auth.py  components.py  cube.py  db.py  default_config.py  entrypoints.py  executor.py  executor_container.py  extraction.py  filestore.py  init_db.py  kb_index.py  kb_store.py  keys_cli.py  llm.py  llm_endpoints.py  membership.py  pipeline_cache.py  pipelines.py  progress.py  provenance.py  query_api.py  query_core.py  research.py  retrieval.py  settings.py  static_rater.py  sweeper.py  tasks.py  textdiff.py  traits.py  users_cli.py
backend/madosho_server/eval/: attribute.py  golden.py  planner.py  proposal.py  runner.py  scorer.py  search.py
docs/: AUTH.md  COMPLIANCE.md  EXECUTOR.md  HEADLESS.md
examples/: README.md
examples/api-contract/: README.md  contract_demo.py
examples/auth/: login.py  probe.py
examples/chat-frontends/: README.md  chat_frontends_demo.py
examples/cli/: README.md  ask.py  retrieve.py
examples/demo/: README.md  demo_all.py
examples/distributed/: README.md  proof.py
examples/headless/: ingest.py
examples/mcp/: README.md  claude_desktop_config.example.json  mcp_demo.py
examples/tls/: Caddyfile  README.md
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  Shell.tsx  router.tsx  setupTests.ts
frontend/src/__tests__/: App.test.tsx  router.test.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx  Login.tsx  ReadOnlyBanner.tsx
frontend/src/design/: ConfirmDialog.tsx  Frame.tsx  Modal.tsx  primitives.tsx  tokens.css  tokens.ts
frontend/src/hooks/: useEndpointModels.ts  usePolling.ts  useRunningJobsCount.ts
frontend/src/lib/: highlight.tsx  markdownTable.tsx  optionsForm.test.ts  optionsForm.ts  recipe.test.ts  recipe.ts
frontend/src/pages/: Alchemy.tsx  AlchemyGoalDetail.tsx  AlchemyRunView.tsx  BuildConsole.tsx  Compare.tsx  ContextualLlmSelect.tsx  Corpora.tsx  CorpusDetail.tsx  Documents.tsx  EvalRun.tsx  ImportKbModal.tsx  Jobs.tsx  KbDetail.tsx  Keys.tsx  KnowledgeBases.tsx  NotFound.tsx  Quality.tsx  RecipePicker.tsx  ReconfigModal.tsx  Research.tsx  ResearchRun.tsx  SaveToKbModal.tsx  Scrying.tsx  Settings.tsx  Stub.tsx  UploadModal.tsx  Users.tsx  VisionLlmSelect.tsx  Workbench.tsx  proposalActions.ts
frontend/tests/e2e/: happy-path.spec.ts
madosho_cli/: README.md  __init__.py  commands.py  core.py  http.py  kb_pack.py  main.py  manifest.py
madosho_mcp/: __init__.py  __main__.py  server.py
madosho_toolserver/: __init__.py  app.py
packaging/madosho-cli/: README.md  pyproject.toml
packaging/madosho-mcp/: README.md  pyproject.toml
research_agent/: README.md  __init__.py  agent_md.py  autonomous.md  cli.py  llm.py  loop.py  tools.py  types.py
services/agent-server/: .env.example  README.md  docker-compose.yml  preset.ini
services/llm-endpoint/: .env.example  README.md  docker-compose.yml  preset.ini
services/llm-server/: .env.example  README.md  docker-compose.yml  preset.ini
services/vision-server/: .env.example  README.md  docker-compose.yml  preset.ini
skills/: AGENTS.md  README.md  agent_pack_demo.py  install.py  research_trigger.py
skills/madosho-kb/: SKILL.md
skills/madosho-research/: SKILL.md  autonomous.md
skills/madosho-search/: SKILL.md
tests/fixtures/toy_plugin/: pyproject.toml
tests/fixtures/toy_plugin/src/madosho_toy/: __init__.py
tests/integration/: conftest.py  test_citations_compose_e2e.py  test_container_executor_live.py  test_docling_adapter.py  test_document_library_compose_e2e.py  test_e2e_milestone.py  test_eval_compose_e2e.py  test_eval_full_run.py  test_ingest_compose_e2e.py  test_lancedb_store.py  test_llm_endpoints_compose_e2e.py  test_pipelines_compose_e2e.py  test_plugin_discovery.py  test_postgres.py  test_qdrant_container.py  test_qdrant_store.py  test_query_compose_e2e.py  test_ratings_compose_e2e.py  test_research_agent_compose_e2e.py  test_research_cli_compose_e2e.py  test_research_compose_e2e.py  test_st_models.py
tests/unit/: conftest.py  test_agent_pack.py  test_agent_skills.py  test_alchemy_api.py  test_alchemy_cli.py  test_alchemy_compile.py  test_alchemy_concurrency.py  test_alchemy_confidence.py  test_alchemy_db.py  test_alchemy_exec.py  test_alchemy_handoffs.py  test_alchemy_ledger.py  test_alchemy_llm_counting.py  test_alchemy_orchestrator.py  test_alchemy_prompts.py  test_alchemy_render.py  test_alchemy_worker.py  test_auth_flag_and_precedence.py  test_auth_keys.py  test_bearer_passthrough.py  test_chunker_options_endpoints.py  test_cli.py  test_cli_contract.py  test_comparison_api.py  test_components.py  test_components_options_schema.py  test_compose_config.py  test_config.py  test_config_optional_source.py  test_contextual_chunker.py  test_contracts_on_fakes.py  test_control_models.py  test_core_isolation.py  test_corpus.py  test_corpus_pipeline_pin.py  test_corpus_stages.py  test_cube.py  test_cube_api.py  test_db_models.py  test_default_config.py  (+120 more)
(+50 files in other folders)
